apps/play/src/style.css
body {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Open Sans',
    'Helvetica Neue',
    sans-serif;

  margin: 0;
  padding: 0;

  background-color: var(--bg-color-1);
  color: var(--color-text);

  /* Temp fix for light theme readability - outline effect */
  text-shadow:
    -1px -1px 0 rgba(0, 0, 0, 0.3),
    1px -1px 0 rgba(0, 0, 0, 0.3),
    -1px 1px 0 rgba(0, 0, 0, 0.3),
    1px 1px 0 rgba(0, 0, 0, 0.3);
}

:root {
  interpolate-size: allow-keywords;
}

/* DEBUG */

/* * {
  outline: 2px lime solid;
} */

/* Utils / els / misc */

gain-lfo-sync-toggle,
pitch-lfo-sync-toggle,
feedback-mode-toggle,
pan-drift-toggle {
  color: var(--color-text);
  height: fit-content;
  padding: 0;
  margin: 0;
}

.knob-container {
  padding: 0.5rem;
}

.knob-container .knob-label {
  font-size: 0.8rem;
  -webkit-user-select: none;
  user-select: none;
}

select,
::picker(select) {
  appearance: base-select;
  background-color: #333;
  color: var(--color-text);
}

select {
  font-size: smaller;
}

selectedcontent,
option {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

option {
  padding-block: 0.1rem;
}

option::checkmark {
  display: none;
}

option:checked {
  background-color: #26436e;
  color: #d6d6d6;
}

/* === LAYOUT START === */

.content-wrapper {
  position: relative;
  padding: clamp(2px, 0.5em, 4rem);
}

.control-grid {
  display: grid;
  position: relative;
  margin-inline: auto;
  inset: 0;
  padding: 1rem;
  padding-right: 2.5rem; /* extra for row-collapse icons */

  width: fit-content;
  max-width: clamp(300px, fit-content, calc(100svw - 3rem));
  height: fit-content;

  row-gap: 1rem;
  column-gap: 1rem;
  grid-auto-rows: min-content;
  border: 1px solid #a8a6a692;
  border-radius: 0.5rem;
  background-color: var(--bg-color-2);

  -webkit-user-select: none;
  user-select: none;
  will-change: grid-template-areas, width;
  transition:
    grid-template-areas 0.2s ease,
    width 0.2s ease;
}

/* Layout variants */
.control-grid.layout-desktop {
  grid-template-areas:
    'env env sample space'
    'env env filter feedback'
    'loop trim misc lfo'
    'toggle keyboard keyboard keyboard';
}

.control-grid.layout-mobile {
  grid-template-columns: 1fr;

  grid-template-areas:
    'sample'
    'env'
    'keyboard'
    'loop'
    'trim'
    'space'
    'filter'
    'misc'
    'feedback'
    'lfo'
    'toggle';
}

.control-grid.layout-tablet {
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    'env sample'
    'env filter'
    'loop trim'
    'space misc'
    'feedback feedback'
    'lfo lfo'
    'keyboard keyboard'
    'toggle .';
}

/* Tablet */
.control-grid.layout-tablet .row-collapse-icon {
  display: none;
  pointer-events: none;
}

.control-grid.layout-tablet .control-group {
  box-sizing: border-box;
  overflow: hidden;
  max-width: 100%;
  min-width: 0;
  justify-content: center;
}

.control-grid.layout-tablet .env-group {
  min-height: 150px;
}

.control-grid.layout-tablet .keyboard-group {
  overflow-x: auto;
  overflow-y: hidden;
}

.control-grid.layout-tablet piano-keyboard {
  max-width: 100%;
  overflow-x: auto;
}

.control-grid.layout-tablet envelope-switcher {
  max-width: 100%;
  overflow: hidden;
}

.control-grid.layout-tablet piano-keyboard webaudio-keyboard {
  width: 100%;
  max-width: calc(100dvw - 2rem);
}

/* Mobile */

.control-grid.layout-mobile {
  max-width: 100%;
  overflow: hidden;
}

.control-grid.layout-mobile .row-collapse-icon {
  display: none;
  pointer-events: none;
}

.control-grid.layout-mobile .control-group {
  box-sizing: border-box;
  overflow: hidden;
  max-width: 100%;
  min-width: 0;
  justify-content: center;
}

.control-grid.layout-mobile .env-group {
  min-height: 150px;
}

.control-grid.layout-mobile .keyboard-group {
  overflow-x: auto;
  overflow-y: hidden;
}

.control-grid.layout-mobile piano-keyboard {
  max-width: 100%;
  overflow-x: auto;
}

.control-grid.layout-mobile piano-keyboard webaudio-keyboard {
  width: 100%;
  max-width: calc(100dvw - 2rem);
}

/* ____ */

.flex-col {
  display: flex;
  flex-direction: column;
  justify-content: center;

  align-items: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
}

.envelope-buttons {
  display: flex;
  gap: 0 0.5rem;
  width: fit-content;
}

.envelope-buttons > .button {
  padding: 0 0.2rem;
  border: solid 1px rgba(0, 0, 0, 0);
  border-radius: 5%;

  color: black;
  background-color: #cccccce2;

  text-shadow: none;
}

.envelope-buttons .button.selected {
  background-color: #ddd;
}

.envelope-buttons > .button:hover {
  background-color: #eee;
  border: 1px solid rgb(0, 0, 0);
}

/* GROUPS */

.control-group {
  display: flex;

  align-self: start;
  justify-self: center;

  border: none;
  border: 1px solid #a8a6a692;
  border-radius: 0.5rem;
  padding: 0.5rem;
  gap: 0.5rem;

  background-color: var(--bg-color-3);

  will-change: max-height, opacity, width, background-color, padding, border;
  transition: all 0.2s ease;
}

.control-group > legend {
  text-align: center;
  font-weight: normal;
  color: var(--color-text);
}

.control-group.collapsed .expandable-content {
  max-height: 0;
  opacity: 0;
  width: fit-content;

  pointer-events: none;
  overflow: hidden;
}

.control-group.collapsed {
  border: none;
  border-top: 1px solid #a8a6a692;
  border-radius: 0;
  padding: 0.5rem 0rem;

  background-color: transparent;
}

.expandable-content {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  align-items: flex-start;

  max-height: 60dvh;
  overflow: hidden;
  opacity: 1;
  transition:
    max-height 0.2s ease,
    opacity 0.2s ease;
}

.expandable-legend {
  cursor: pointer;
  -webkit-user-select: none;
  user-select: none;
}

.expandable-legend:hover {
  color: #fff;
}

.feedback-group {
  grid-area: feedback;
}

.env-group {
  grid-area: env;
  height: auto;
  min-height: 300px;
}
/* ... */

